# easy-frontend

./: README.md  mypy.ini  pyproject.toml
docs/: topology.drawio
easy_frontend/: web.py
easy_frontend/actions/: __init__.py
easy_frontend/mapper/: __init__.py
easy_frontend/objects/: __init__.py
easy_frontend/reflection_mapper/: __init__.py  test_mapper.py
easy_frontend/renderer/: __init__.py  test_renderer.py
easy_frontend/renderer/basic_renderer/: dom_renderer.py  test_renderer.py
