[tool.poetry]
name = "easy-frontend"
version = "0.1.0"
description = ""
authors = ["Lucas Silva <lucas76leonardo@gmail.com>"]
readme = "README.md"
packages = [{include = "easy_frontend"}]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.12.0", allow-prereleases = true}
mypy = "0.981"
pytest-watch = "^4.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
